[refactor] 전체 조회 redDot 활성화 및 정렬 추가
변경 사항 :
 - 더미 데이털 임시 처리해두었던 redDot 관련 로직 추가
 - 게시글 정렬 추가 isNewArticle -> redDot -> 최신순