@@ -4,6 +4,7 @@ import com.final_10aeat.common.dto.UserIdAndRole;
 import com.final_10aeat.common.enumclass.ArticleCategory;
 import com.final_10aeat.common.enumclass.Progress;
 import com.final_10aeat.common.service.AuthenticationService;
+import com.final_10aeat.domain.articleIssue.repository.ArticleIssueCheckRepository;
 import com.final_10aeat.domain.comment.repository.CommentRepository;
 import com.final_10aeat.domain.repairArticle.dto.response.RepairArticleResponseDto;
 import com.final_10aeat.domain.repairArticle.dto.response.RepairArticleSummaryDto;
@@ -11,6 +12,8 @@ import com.final_10aeat.domain.repairArticle.entity.RepairArticle;
 import com.final_10aeat.domain.repairArticle.repository.RepairArticleRepository;
 import com.final_10aeat.domain.save.repository.ArticleSaveRepository;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -27,6 +30,7 @@ public class OwnerRepairArticleService {
     private final RepairArticleRepository repairArticleRepository;
     private final CommentRepository commentRepository;
     private final ArticleSaveRepository articleSaveRepository;
+    private final ArticleIssueCheckRepository articleIssueCheckRepository;
     private final AuthenticationService authenticationService;
 
     public RepairArticleSummaryDto getRepairArticleSummary(Long officeId) {
@@ -46,37 +50,66 @@ public class OwnerRepairArticleService {
             officeId, progresses, category);
 
         Set<Long> savedArticleIds;
-        if (!userIdAndRole.isManager()) {
+        Set<Long> checkedIssueIds;
+        boolean isManager = userIdAndRole.isManager();
+
+        if (!isManager) {
             List<Long> articleIds = articles.stream().map(RepairArticle::getId)
                 .collect(Collectors.toList());
             savedArticleIds = articleSaveRepository.findSavedArticleIdsByMember(userIdAndRole.id(),
                 articleIds);
+            checkedIssueIds = articleIssueCheckRepository.findCheckedIssueIdsByMember(
+                userIdAndRole.id());
         } else {
+            checkedIssueIds = new HashSet<>();
             savedArticleIds = new HashSet<>();
         }
 
-        return articles.stream().map(article -> {
-            boolean isNewArticle = article.getCreatedAt().plusDays(1).isAfter(LocalDateTime.now());
-            int commentCount = (int) commentRepository.countByRepairArticleIdAndDeletedAtIsNull(
-                article.getId());
-            boolean isSaved = savedArticleIds.contains(article.getId());
+        List<RepairArticleResponseDto> isNewArticleList = articles.stream()
+            .map(article -> mapToDto(article, savedArticleIds, checkedIssueIds, isManager))
+            .filter(RepairArticleResponseDto::isNewArticle)
+            .sorted(Comparator.comparing(RepairArticleResponseDto::createdAt).reversed())
+            .toList();
 
-            return new RepairArticleResponseDto(
-                article.getId(),
-                article.getCategory().name(),
-                article.getManager().getName(),
-                article.getProgress().name(),
-                article.getTitle(),
-                article.getStartConstruction(),
-                article.getEndConstruction(),
-                commentCount,
-                200, // Dummy view count
-                isSaved,
-                false, // Dummy issue flag
-                isNewArticle,
-                article.getImages().isEmpty() ? null
-                    : article.getImages().iterator().next().getImageUrl()
-            );
-        }).collect(Collectors.toList());
+        List<RepairArticleResponseDto> isNotNewArticleList = articles.stream()
+            .map(article -> mapToDto(article, savedArticleIds, checkedIssueIds, isManager))
+            .filter(dto -> !dto.isNewArticle())
+            .sorted(Comparator.comparing(RepairArticleResponseDto::redDot)
+                .thenComparing(RepairArticleResponseDto::createdAt).reversed())
+            .toList();
+
+        List<RepairArticleResponseDto> sortedArticles = new ArrayList<>();
+        sortedArticles.addAll(isNewArticleList);
+        sortedArticles.addAll(isNotNewArticleList);
+
+        return sortedArticles;
+    }
+
+    private RepairArticleResponseDto mapToDto(RepairArticle article, Set<Long> savedArticleIds,
+        Set<Long> checkedIssueIds, boolean isManager) {
+        boolean isNewArticle = article.getCreatedAt().plusDays(1).isAfter(LocalDateTime.now());
+        int commentCount = (int) commentRepository.countByRepairArticleIdAndDeletedAtIsNull(
+            article.getId());
+        boolean isSaved = savedArticleIds.contains(article.getId());
+        boolean hasIssue = !isManager && article.hasIssue() && !checkedIssueIds.contains(
+            article.getIssue().getId());
+
+        return new RepairArticleResponseDto(
+            article.getId(),
+            article.getCategory().name(),
+            article.getManager().getName(),
+            article.getProgress().name(),
+            article.getTitle(),
+            article.getStartConstruction(),
+            article.getEndConstruction(),
+            article.getCreatedAt(),
+            commentCount,
+            200,
+            isSaved,
+            hasIssue,
+            isNewArticle,
+            article.getImages().isEmpty() ? null
+                : article.getImages().iterator().next().getImageUrl()
+        );
     }
 }
